--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:44:00 PM</p>
+    <p class="lastupdate">09/06/2020 02:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">114.0&#176;F</td>
+        <td class="data">114.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">114.0&#176;F</td>
+        <td class="data">114.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">114.0&#176;F</td>
+        <td class="data">114.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.9&#176;F</td>
+        <td class="data">49.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.080)</td>
+        <td class="data">29.840 inHg (-0.081)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:42:52 PM">
-            114.0</span><br/>
+          <span title="02:48:52 PM">
+            114.4</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:42:52 PM (Sunday)">
-            114.0</span><br/>
+          <span title="02:48:52 PM (Sunday)">
+            114.4</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:42:52 PM">
-            114.0</span><br/>
+          <span title="09/06/2020 02:48:52 PM">
+            114.4</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:42:52 PM">
-            114.0</span><br/>
+          <span title="09/06/2020 02:48:52 PM">
+            114.4</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:42:52 PM">
-            114.0</span><br/>
+          <span title="09/06/2020 02:48:52 PM">
+            114.4</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:42:52 PM" class="hival">
-            114.0</span>
+          <span title="02:48:52 PM" class="hival">
+            114.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:42:52 PM (Sunday)" class="hival">
-            114.0</span>
+          <span title="02:48:52 PM (Sunday)" class="hival">
+            114.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:42:52 PM" class="hival">
-            114.0</span>
+          <span title="09/06/2020 02:48:52 PM" class="hival">
+            114.4</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:42:52 PM" class="hival">
-            114.0</span>
+          <span title="09/06/2020 02:48:52 PM" class="hival">
+            114.4</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:42:52 PM" class="hival">
-            114.0</span>
+          <span title="09/06/2020 02:48:52 PM" class="hival">
+            114.4</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 23 hours, 57 minutes</td>
+      <td class="data">5 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 23 hours, 57 minutes</td>
+      <td class="data">5 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
