--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:54:00 PM</p>
+    <p class="lastupdate">09/06/2020 02:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">114.6&#176;F</td>
+        <td class="data">114.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">114.6&#176;F</td>
+        <td class="data">114.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">114.6&#176;F</td>
+        <td class="data">114.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.4&#176;F</td>
+        <td class="data">49.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.837 inHg (-0.081)</td>
+        <td class="data">29.839 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">2 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.9&#176;F</td>
+        <td class="data">87.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:53:08 PM">
-            114.6</span><br/>
+          <span title="02:58:04 PM">
+            114.9</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:53:08 PM (Sunday)">
-            114.6</span><br/>
+          <span title="02:58:04 PM (Sunday)">
+            114.9</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:53:08 PM">
-            114.6</span><br/>
+          <span title="09/06/2020 02:58:04 PM">
+            114.9</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:53:08 PM">
-            114.6</span><br/>
+          <span title="09/06/2020 02:58:04 PM">
+            114.9</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:53:08 PM">
-            114.6</span><br/>
+          <span title="09/06/2020 02:58:04 PM">
+            114.9</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:53:08 PM" class="hival">
-            114.6</span>
+          <span title="02:58:04 PM" class="hival">
+            114.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:53:08 PM (Sunday)" class="hival">
-            114.6</span>
+          <span title="02:58:04 PM (Sunday)" class="hival">
+            114.9</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:53:08 PM" class="hival">
-            114.6</span>
+          <span title="09/06/2020 02:58:04 PM" class="hival">
+            114.9</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:53:08 PM" class="hival">
-            114.6</span>
+          <span title="09/06/2020 02:58:04 PM" class="hival">
+            114.9</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:53:08 PM" class="hival">
-            114.6</span>
+          <span title="09/06/2020 02:58:04 PM" class="hival">
+            114.9</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="02:53:02 PM">
-            29.837</span>
+          <span title="02:55:02 PM">
+            29.836</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="02:53:02 PM (Sunday)">
-            29.837</span>
+          <span title="02:55:02 PM (Sunday)">
+            29.836</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:49:02 PM">
-            86.9</span><br/>
+          <span title="02:54:02 PM">
+            87.0</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:49:02 PM (Sunday)">
-            86.9</span><br/>
+          <span title="02:54:02 PM (Sunday)">
+            87.0</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 0 hours, 7 minutes</td>
+      <td class="data">5 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 0 hours, 7 minutes</td>
+      <td class="data">5 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
