--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:59:00 PM</p>
+    <p class="lastupdate">09/06/2020 03:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">114.9&#176;F</td>
+        <td class="data">115.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">114.9&#176;F</td>
+        <td class="data">115.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">114.9&#176;F</td>
+        <td class="data">115.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.6&#176;F</td>
+        <td class="data">49.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.839 inHg (-0.077)</td>
+        <td class="data">29.836 inHg (-0.082)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SSW (202&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.0&#176;F</td>
+        <td class="data">87.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:58:04 PM">
-            114.9</span><br/>
+          <span title="03:03:12 PM">
+            115.2</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:58:04 PM (Sunday)">
-            114.9</span><br/>
+          <span title="03:03:12 PM (Sunday)">
+            115.2</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:58:04 PM">
-            114.9</span><br/>
+          <span title="09/06/2020 03:03:12 PM">
+            115.2</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:58:04 PM">
-            114.9</span><br/>
+          <span title="09/06/2020 03:03:12 PM">
+            115.2</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:58:04 PM">
-            114.9</span><br/>
+          <span title="09/06/2020 03:03:12 PM">
+            115.2</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:58:04 PM" class="hival">
-            114.9</span>
+          <span title="03:03:12 PM" class="hival">
+            115.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:58:04 PM (Sunday)" class="hival">
-            114.9</span>
+          <span title="03:03:12 PM (Sunday)" class="hival">
+            115.2</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 02:58:04 PM" class="hival">
-            114.9</span>
+          <span title="09/06/2020 03:03:12 PM" class="hival">
+            115.2</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 02:58:04 PM" class="hival">
-            114.9</span>
+          <span title="09/06/2020 03:03:12 PM" class="hival">
+            115.2</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 02:58:04 PM" class="hival">
-            114.9</span>
+          <span title="09/06/2020 03:03:12 PM" class="hival">
+            115.2</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          11
+          12
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          11
+          12
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:54:02 PM">
-            87.0</span><br/>
+          <span title="03:02:02 PM">
+            87.2</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:54:02 PM (Sunday)">
-            87.0</span><br/>
+          <span title="03:02:02 PM (Sunday)">
+            87.2</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 0 hours, 12 minutes</td>
+      <td class="data">5 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 0 hours, 12 minutes</td>
+      <td class="data">5 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
