--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:04:00 PM</p>
+    <p class="lastupdate">09/06/2020 03:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">115.1&#176;F</td>
+        <td class="data">114.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">115.1&#176;F</td>
+        <td class="data">114.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">115.1&#176;F</td>
+        <td class="data">114.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.8&#176;F</td>
+        <td class="data">46.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">11%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.836 inHg (-0.082)</td>
+        <td class="data">29.834 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">5 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.2&#176;F</td>
+        <td class="data">87.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,32 +153,32 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:03:12 PM">
-            115.2</span><br/>
+          <span title="03:05:16 PM">
+            115.3</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:03:12 PM (Sunday)">
-            115.2</span><br/>
+          <span title="03:05:16 PM (Sunday)">
+            115.3</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:03:12 PM">
-            115.2</span><br/>
+          <span title="09/06/2020 03:05:16 PM">
+            115.3</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:03:12 PM">
-            115.2</span><br/>
+          <span title="09/06/2020 03:05:16 PM">
+            115.3</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:03:12 PM">
-            115.2</span><br/>
+          <span title="09/06/2020 03:05:16 PM">
+            115.3</span><br/>
           <span title="07/03/2020 05:53:04 AM">
             46.3</span>
         </td>
@@ -187,24 +187,24 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:03:12 PM" class="hival">
-            115.2</span>
+          <span title="03:05:16 PM" class="hival">
+            115.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:03:12 PM (Sunday)" class="hival">
-            115.2</span>
+          <span title="03:05:16 PM (Sunday)" class="hival">
+            115.3</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/06/2020 03:03:12 PM" class="hival">
-            115.2</span>
+          <span title="09/06/2020 03:05:16 PM" class="hival">
+            115.3</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/06/2020 03:03:12 PM" class="hival">
-            115.2</span>
+          <span title="09/06/2020 03:05:16 PM" class="hival">
+            115.3</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/06/2020 03:03:12 PM" class="hival">
-            115.2</span>
+          <span title="09/06/2020 03:05:16 PM" class="hival">
+            115.3</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="02:27:28 PM">
-            12</span>
+          <span title="03:05:44 PM">
+            11</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="02:27:28 PM (Sunday)">
-            12</span>
+          <span title="03:05:44 PM (Sunday)">
+            11</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="02:55:02 PM">
-            29.836</span>
+          <span title="03:08:02 PM">
+            29.834</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="02:55:02 PM (Sunday)">
-            29.836</span>
+          <span title="03:08:02 PM (Sunday)">
+            29.834</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:02:02 PM">
-            87.2</span><br/>
+          <span title="03:06:02 PM">
+            87.3</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:02:02 PM (Sunday)">
-            87.2</span><br/>
+          <span title="03:06:02 PM (Sunday)">
+            87.3</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 0 hours, 17 minutes</td>
+      <td class="data">5 days, 0 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 0 hours, 17 minutes</td>
+      <td class="data">5 days, 0 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
